--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "main": "hello.js",
   "dependencies": {
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue": "2.5.16",
+    "vue-router": "3.0.1"
   },
   "devDependencies": {},
   "scripts": {
